--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1236,11 +1236,11 @@ As we evaluated nearly 10 thousand \emph{QB} data sets, we published the evaluat
 Table \ref{tab:evaluation-constraint-violations} shows the results of the evaluation, more specifically the constraints and the constraint violations, which are caused by these constraints, in percent.
 The constraints and their raised constraint violations are grouped by vocabulary, complexity level of their type, and their severity level.
 The number of evaluated triples and data sets differs between the vocabularies
-as we evaluated 3.8 billion QB, 480 million SKOS, and 10 million Disco triples.
+as we evaluated 3.8 billion \emph{QB}, 480 million \emph{SKOS}, and 10 million \emph{Disco} triples.
 To be able to formulate hypotheses which apply for all vocabularies,  
 we normalize the total percentage values.
-As, e.g., 18\% of the Disco, 100\% of the QB, and 21\% of the \emph{SKOS} violations are caused by complex constraints,  
-we calculate that 46.6\% of the violations are raised by complex constraints of all vocabularies.
+As, e.g., 18\% of the \emph{Disco}, 100\% of the \emph{QB}, and 21\% of the \emph{SKOS} violations are caused by \emph{complex constraints},  
+we calculate that 46.6\% of the violations are raised by \emph{complex constraints} of all vocabularies.
 %by building the arithmetic mean over the individual vocabularies' percentage values. 
 %\tb{More than 80\% of the overall approx. 55 million constraint violations are caused by \emph{QB} constraints.}
 
@@ -1284,25 +1284,66 @@ we calculate that 46.6\% of the violations are raised by complex constraints of 
 %(for \emph{QB} even three quarters).
 %\emph{Existential quantifications} (\emph{R-86}, 32.4\%, \emph{Disco}), \emph{data model consistency} (31.4\%, \emph{QB}), and \emph{structure} (28.6\%, \emph{SKOS}) are the constraint types the most constraints are instantiated from.
 
-Almost 1/2 of all 213 constraints and more than 50\% of the \emph{Disco} and the \emph{QB} constraints are vocabulary constraints.
-The \emph{SKOS} constraints, on the other side, are equally distributed among the three disjoint sets of constraint types. 
+Almost 1/2 of all 213 constraints and more than 50\% of the \emph{Disco} and the \emph{QB} constraints are \emph{vocabulary constraints}.
+The \emph{SKOS} constraints are equally distributed among the three disjoint sets of constraint types. 
 \begin{hyp}
-A significant amount of 46 \% of the constraints are directly extractable from established and newly defined vocabularies. 
+A significant amount of 46 \% of the constraints are directly extractable from formal specifications of established and newly defined vocabularies. 
 \end{hyp} 
 
-Nearly 1/2 of the constraint violations are caused by complex constraints, 1/3 by simple constraints, and 1/5 by vocabulary constraints.
-2/3 of the constraint violations, thrown for \emph{Disco} data sets, result from vocabulary constraints,
-almost only conplex constraints raised constraint violations for \emph{QB} data sets, and 
-nearly 80\% of the \emph{SKOS} constraint violations are caused by simple constraints.
+\begin{table}[H]
+		\scriptsize
+    \begin{center}
+    \begin{tabular}{@{}lcccccccc@{}}
+    %       & \multicolumn{2}{c}{\textbf{Vocabularies}}
+    %\\  \cmidrule{2-3}
+		\hline
+    \multirow{2}{*}{} &
+      \multicolumn{2}{c}{\textbf{\emph{Disco}}} &
+      \multicolumn{2}{c}{\textbf{\emph{QB}}} &
+      \multicolumn{2}{c}{\textbf{\emph{SKOS}}} &
+      \multicolumn{2}{c}{\textbf{\emph{Total}}} \\
+    \textbf{} & C & CV & C & CV & C & CV & C & CV \\
+    \hline
+    %\\ \midrule
+		 & 143 & 3,575,002 & 35 & 45,635,861 & 35 & 5,540,988 & 213 & 54,751,851 \\
+		\hline
+		\textbf{\emph{complex}} & 25.9\% & 18.3\% & 37.1\% & \textbf{100\%} & \textbf{37.1\%} & 21.4\% & 33.4\% & \textbf{46.6\%} \\
+		\textbf{\emph{simple}} & 19.6\% & 15.7\% & 8.6\% & 0.0\% & \textbf{34.3\%} & \textbf{78.6\%} & 20.8\% & 31.4\% \\
+		\textbf{\emph{vocabulary}} & \textbf{54.6\%} & \textbf{66.1\%} & \textbf{54.3\%} & 0.0\% & \textbf{28.6\%} & 0.0\% & \textbf{45.8\%} & 22.0\% \\
+		%\hline
+		%\emph{CV (}$\mathcal{C}_B ^{\mathcal{R}}$\emph{)} & 2,333,365 (65.3\%) & 1,777 (0\%) & 0 (0\%) & 2,335,142 (4.3\%) \\
+		%\emph{CV (}$\overline{\mathcal{C}_B ^{\mathcal{R}}}$\emph{)} & 28,000 (0.8\%) & 0 (0\%) & 0 (0\%) & 28,000 (0.1\%) \\
+		\hline
+		\textbf{\emph{info}} & \textbf{52.5\%} & \textbf{52.6\%} & 11.4\% & 0.0\% & \textbf{60.0\%} & 41.2\% & \textbf{41.3\%} & 31.3\% \\
+		\textbf{\emph{warning}} & 7.0\% & 29.4\% & 8.6\% & \textbf{99,8\%} & 14.3\% & \textbf{58.8\%} & 10.0\% & \textbf{62.7\%} \\
+		\textbf{\emph{error}} & 40.6\% & 18\% & \textbf{80.0\%} & 0.3\% & 25.7\% & 0.0\% & \textbf{48.8\%} & 6.1\%\\
+    \bottomrule
+    \end{tabular}
+    \\ \emph{C (constraints), CV (constraint violations)}
+    \caption{Constraints and Constraint Violations}
+		\label{tab:evaluation-constraint-violations}
+    \end{center}
+\end{table}
+
+Nearly 1/2 of the violations are caused by \emph{complex constraints}, 1/3 by \emph{simple constraints}, and 1/5 by \emph{vocabulary constraints}.
 
 \begin{hyp}
-The fact that only 1/5 of all constraint violations result from vocabulary constraints, 
+The fact that only 1/5 of all violations result from vocabulary constraints, 
 even though, 46\% of all constraints are vocabulary constraints,
-indicates that in general data conforms to the intended syntax and semantics of vocabularies.
+indicates good data quality in general (according to formal specifications of vocabularies).
 \end{hyp}
 
-For established vocabularies, vocabulary constraints caused nearly 0\% of all constraint violations (e.g. only 1.777 constraint violations for \emph{QB} constraints).  
-For newly defined vocabularies, however, 2/3 of all constraint violations are raised by vocabulary constraints. 
+2/3 of the \emph{Disco} violations result from \emph{vocabulary constraints},
+almost only \emph{complex constraints} raised \emph{QB} violations, and 
+nearly 80\% of the \emph{SKOS} violations are caused by \emph{simple constraints}.
+
+\begin{hyp}
+For established vocabularies, vocabulary constraints caused nearly 0\% of all violations\footnote{e.g. only 1.777 \emph{QB} violations}
+which indicates good data quality (according to formal specifications of vocabularies). 
+For newly defined vocabularies, however, 2/3 of all violations are raised by vocabulary constraints
+which indicates good data quality (according to formal specifications of vocabularies).
+\end{hyp}
+
 \begin{hyp}
 Complex constraints are met by data represented by established vocabularies but not by data represented by newly developed vocabularies. 
 \end{hyp}
